// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour animated placeholder true 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour customClassName"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="customClassName rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask customClassName"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class="rc-tour-placeholder-animated"
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour animated true 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour customClassName"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="customClassName rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask customClassName"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class="rc-tour-placeholder-animated"
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour basic 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <div>
        <button>
          Create
        </button>
        <div
          style="height: 200px;"
        />
        <button>
          Update
        </button>
        <button>
          Delete
        </button>
      </div>
      <div
        style="height: 200px;"
      />
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div />
  </div>
</body>
`;

exports[`Tour renderPanel 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div>
          创建
          ,当前在第
          0
          步,描述为
          创建一条数据
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour rootClassName 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour customClassName"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="customClassName rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask customClassName"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour run in strict mode 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button
        class="btn1"
      >
        Open: 
        true
      </button>
      <button
        class="btn2"
      >
        Upload
      </button>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: 50%; top: 50%; width: 1px; height: 1px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              >
                <span
                  class="active"
                />
                <span
                  class=""
                />
              </div>
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-next-btn"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tour run in strict mode 2`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button
        class="btn1"
      >
        Open: 
        true
      </button>
      <button
        class="btn2"
      >
        Upload
      </button>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                更新
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              更新一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              >
                <span
                  class=""
                />
                <span
                  class="active"
                />
              </div>
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-prev-btn"
                >
                  Prev
                </button>
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Tour should keep current when controlled 1`] = `
<body>
  <div>
    <button
      class="open-tour"
    >
      open
    </button>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                step 2
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              >
                <span
                  class=""
                />
                <span
                  class="active"
                />
              </div>
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-prev-btn"
                >
                  Prev
                </button>
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: 50%; top: 50%; width: 1px; height: 1px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour should return step 1 when reopen 1`] = `
<body>
  <div>
    <button
      class="open-tour"
    >
      open
    </button>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                step 1
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              >
                <span
                  class="active"
                />
                <span
                  class=""
                />
              </div>
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-next-btn"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: 50%; top: 50%; width: 1px; height: 1px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour should update position when window resize 1`] = `
<body>
  <div>
    <div
      style="width: 100%;"
    >
      <button
        class="btn2"
      >
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: 9px; top: 4px; width: 242px; height: 192px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="192"
              rx="2"
              width="242"
              x="9"
              y="4"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="4"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="9"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 196px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="196"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 251px)"
          x="251"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour showArrow should show tooltip arrow default 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour single 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button>
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`Tour use custom builtinPlacements 1`] = `
<body>
  <div>
    <div
      style="margin: 20px;"
    >
      <button
        class="btn1"
      >
        按钮
      </button>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="rc-tour"
        style="z-index: 1090; opacity: 0;"
      >
        <div
          class="rc-tour-content"
        >
          <div
            class="rc-tour-arrow"
          />
          <div
            class="rc-tour-inner"
          >
            <button
              aria-label="Close"
              class="rc-tour-close"
              type="button"
            >
              <span
                class="rc-tour-close-x"
              >
                ×
              </span>
            </button>
            <div
              class="rc-tour-header"
            >
              <div
                class="rc-tour-title"
              >
                创建
              </div>
            </div>
            <div
              class="rc-tour-description"
            >
              创建一条数据
            </div>
            <div
              class="rc-tour-footer"
            >
              <div
                class="rc-tour-sliders"
              />
              <div
                class="rc-tour-buttons"
              >
                <button
                  class="rc-tour-finish-btn"
                >
                  Finish
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-tour-target-placeholder"
      style="left: -6px; top: -6px; width: 12px; height: 12px; position: fixed; pointer-events: none;"
    />
  </div>
  <div>
    <div
      class="rc-tour-mask"
      style="position: fixed; left: 0px; right: 0px; top: 0px; bottom: 0px; z-index: 900; pointer-events: none;"
    >
      <svg
        style="width: 100%; height: 100%;"
      >
        <defs>
          <mask
            id="rc-tour-mask-test-id"
          >
            <rect
              fill="white"
              height="100%"
              width="100%"
              x="0"
              y="0"
            />
            <rect
              class=""
              fill="black"
              height="12"
              rx="2"
              width="12"
              x="-6"
              y="-6"
            />
          </mask>
        </defs>
        <rect
          fill="rgba(0,0,0,0.5)"
          height="100%"
          mask="url(#rc-tour-mask-test-id)"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="-6"
          pointer-events="auto"
          width="100%"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="-6"
          x="0"
          y="0"
        />
        <rect
          fill="transparent"
          height="calc(100vh - 6px)"
          pointer-events="auto"
          width="100%"
          x="0"
          y="6"
        />
        <rect
          fill="transparent"
          height="100%"
          pointer-events="auto"
          width="calc(100vw - 6px)"
          x="6"
          y="0"
        />
      </svg>
    </div>
  </div>
</body>
`;
